<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_weight="1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:textColor="@color/white"
            android:id="@+id/score_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_lable"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="63dp" />

        <TextView
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:id="@+id/q_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_number"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="141dp"
            tools:layout_editor_absoluteY="57dp" />

        <TextView
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:id="@+id/missed_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missed_lable"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="293dp"
            tools:layout_editor_absoluteY="63dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
    <TextView
        android:padding="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="16dp" />
        <TextView
            android:padding="5dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#252222"
            android:textColorHint="#00FFFFFF"
            android:textColorLink="#2FFFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif"
            tools:layout_editor_absoluteX="206dp"
            tools:layout_editor_absoluteY="90dp" />

    <ImageView
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:id="@+id/dog_img"
        android:layout_width="347dp"
        android:layout_height="343dp"
        android:background="@drawable/image_border"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/ic_launcher"
        />
        <TextView
            android:layout_gravity="center"
            android:padding="5dp"
            android:id="@+id/results_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textSize="30sp"
             />




    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:orientation="horizontal">




    <Spinner
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:id="@+id/breed_options"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="184dp"
        android:layout_height="39dp"
        android:entries="@array/breed_names_array"
        android:prompt="@string/breed_prompt"
         />

    <Button
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonstyle"
        android:text="@string/submit_btn_name"
        android:textSize="20sp"
         />

    </LinearLayout>


    <Button
        android:id="@+id/endGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/buttonstyle2"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:text="exit game"
        android:textColor="@color/yellow"
        android:textSize="20dp"
        android:visibility="visible" />

</LinearLayout>