<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".GuessDog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:padding="5dp">


        <TextView
            android:id="@+id/score_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/score_lable"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/q_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/question_number"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/missed_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/missed_lable"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/breedNameQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Breed Name"
            android:textColor="@color/colorAccent"
            android:textSize="36sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/img1"
                android:layout_width="150dp"
                android:padding="14dp"
                android:cropToPadding="true"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/image_border5"
                android:onClick="onImageClick"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/img2"
                android:padding="14dp"
                android:cropToPadding="true"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/image_border5"
                android:onClick="onImageClick"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ic_launcher" />

        </LinearLayout>


        <ImageView
            android:id="@+id/img3"
            android:padding="14dp"
            android:cropToPadding="true"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/image_border5"
            android:onClick="onImageClick"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:padding="5dp"
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="#252222"
            android:textColorHint="#00FFFFFF"
            android:textColorLink="#2FFFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif" />

    </LinearLayout>


    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/yellow"
        android:text="Next"
        android:textSize="20sp" />


    <Button
        android:id="@+id/endgame2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttonstyle2"
        android:text="end game"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:visibility="visible" />

</LinearLayout>